--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -4753,7 +4753,7 @@ small {
   line-height: 1.5em;
   word-break: break-all;
   font-family: 'robotoregular';
-  background: rgba(31, 10, 113, 0.74);
+  background: rgba(30, 100, 197, 0.74);
   padding: 10px 25px;
   font-size: 1.1rem;
   font-weight: 300;
@@ -5270,9 +5270,9 @@ a.waves-effect .waves-ripple {
   border-radius: 2px;
   will-change: top, opacity;
 }
-#MFrp.modal{
-  width: 90% !important;
-  max-height: 90% !important;
+#mdlnewUser.modal{
+  width: 60% !important;
+  max-height: 50% !important;
 }
  #Dfre, #SPdet, #cxpdet,#MxPdet, #CanjeSPDdet, #RepFechadet, #MaVinetadet{
    width: 72% !important;
@@ -5587,7 +5587,7 @@ input[type=number],
 input[type=search] {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+  border-bottom: 1px solid #006091;
   border-radius: 0;
   outline: none;
   height: 1.5rem;
